--- a/frontend-friends/src/components/pagewrapper/pagewrapper.scss
+++ b/frontend-friends/src/components/pagewrapper/pagewrapper.scss
@@ -27,6 +27,7 @@
         font-size: fontsizes.$fontsz-h2;
         font-weight: 600;
         margin: 0;
+        color: colors.$dark-blue;
     }
 }
 
