--- a/frontend-friends/src/components/subcategoryButton/subcategoryButton.scss
+++ b/frontend-friends/src/components/subcategoryButton/subcategoryButton.scss
@@ -1,4 +1,6 @@
 @use '../../style/colors';
+@use "../../style/fontsizes.scss";
+@use "../../style/margins.scss";
 
 .subcategory-button-wrapper {
     position: relative;
@@ -6,8 +8,8 @@
     label {
         all: unset;
         box-sizing: border-box;
-        height: 70px;
-        padding: 15px 20px;
+        height: 60px;
+        width: 130px;
         user-select: none;
         text-align: center;
         border-radius: 6px;
@@ -18,7 +20,6 @@
         cursor: pointer;
         position: relative;
         transition: all 0.2s;
-        width: 200px;
         font-weight: 600;
         font-size: 0.9rem;
 
@@ -56,6 +57,7 @@
         top: 0;
         width: 100%;
         height: 100%;
+        font-size: fontsizes.$fontsz-p;
         text-align: center;
         text-transform: uppercase;
         font-weight: 600;
