--- a/frontend-friends/src/components/textfield/textfield.scss
+++ b/frontend-friends/src/components/textfield/textfield.scss
@@ -1,4 +1,6 @@
 @use "../../style/colors.scss";
+@use "../../style/fontsizes.scss";
+@use "../../style/margins.scss";
 
 .text-field {
 
@@ -17,12 +19,12 @@
         all: unset;
         border-radius: 6px;
         width: 100%;
-        height: 50px;
+        height: 40px;
         background-color: colors.$text-field-background;
         box-shadow: inset 0 0 0 1px colors.$text-field-stroke;
         box-sizing: border-box;
-        padding: 0 20px;
-        font-size: 18px;
+        padding: 0 margins.$margin-md;
+        font-size: fontsizes.$fontsz-sm;
         transition: box-shadow 0.2s;
 
         &:focus {
@@ -38,9 +40,9 @@
     label {
         position: absolute;
         color: colors.$placeholder-text;
-        font-size: 18px;
-        left: 22px;
-        line-height: 50px;
+        font-size: fontsizes.$fontsz-sm;
+        left: margins.$margin-md;
+        line-height: 40px;
         pointer-events: none;
         cursor:text;
     }
