--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -2,12 +2,8 @@
 @use "../../style/margins.scss";
 
 .dashboard {
-    .content-container {
-        display: block;
-    }
 
     .dashboard-content {
-        flex-grow: 1;
         background-color: white;
         margin-left: margins.$margin-md;
         margin-right: margins.$margin-md;
@@ -26,5 +22,14 @@
         display: flex;
         flex-direction: row;
         column-gap: 1rem;
+    }
+
+    .graph-container {
+        flex: 1.3;
+        display: flex;
+    }
+
+    .list-container {
+        flex: 1;
     }
 }
