--- a/frontend-friends/src/routes/login/Login.scss
+++ b/frontend-friends/src/routes/login/Login.scss
@@ -46,6 +46,7 @@
     button {
         all: unset;
         background-color: colors.$primary-color;
+        font-size: fontsizes.$fontsz-sm;
         font-weight: 600;
         color: white;
         text-align: center;
