--- a/frontend-friends/src/components/textfield/textfield.scss
+++ b/frontend-friends/src/components/textfield/textfield.scss
@@ -60,11 +60,10 @@
     display: flex;
 
     .textfield-left-text{
-        font-size: 18px;
+        font-size: fontsizes.$fontsz-sm;
         display: inline-flex;
         align-items: center;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding: 0 margins.$margin-md;
         background-color: colors.$darker-grey-background;
         color: rgba(0,0,0,0.5);
         border-radius: 0 6px 6px 0;
@@ -76,18 +75,17 @@
 
 
     .textfield-right-text{
-        font-size: 18px;
+        font-size: fontsizes.$fontsz-sm;
         display: inline-flex;
         align-items: center;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 0 margins.$margin-md;
         background-color: colors.$darker-grey-background;
         color: rgba(0,0,0,0.5);
         
         border-radius: 6px 0 0 6px;
         box-shadow: 
         inset 0 1px 0 0 colors.$text-field-stroke, 
-        inset 0 1px 0 0 colors.$text-field-stroke, 
+        inset 0 -1px 0 0 colors.$text-field-stroke, 
         inset 1px 0 0 0 colors.$text-field-stroke;
     }
 
