Layout fixar klart, allt e mindre så vi får plats med mer grejor wooo (#66)
* första utkast feeback från skapat ärende

* Here we go

* Snälla funka

* Kom igen

* Mario

* Fixed some layout problems

* Layout fixes done, here we go

* Some problems when rebasing, should be fixed.

* första utkast feeback från skapat ärende

* Here we go

* Snälla funka

* Kom igen

* Mario

* Fixed some layout problems

* Layout fixes done, here we go

* Some problems when rebasing, should be fixed.

* Rebase done, should now be ready to merge

* Fixed search bar, was too big

---------

Co-authored-by: Mattias <malin153@student.liu.se>

--- a/frontend-friends/src/components/pagewrapper/pagewrapper.scss
+++ b/frontend-friends/src/components/pagewrapper/pagewrapper.scss
@@ -1,24 +1,34 @@
 @use "../../style/colors.scss";
+@use "../../style/margins.scss";
+@use "../../style/fontsizes.scss";
 
 .page-container {
     display: flex;
 }
 
 .content-container {
-    margin-left: 260px;
+    margin-left: 220px;
     flex-grow: 1;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 
     h1 {
         all: unset;
-        font-size: 32px;
+        font-size: fontsizes.$fontsz-h1;
         font-weight: 600;
         color: colors.$dark-blue;
-        margin-top: 40px;
-        margin-left: 40px;
-        margin-bottom: 40px;
+        margin-top: margins.$margin-md;
+        margin-left: margins.$margin-md;
+        margin-bottom: margins.$margin-md;
+        }
+    
+    h2 {
+        font-size: fontsizes.$fontsz-h2;
+        font-weight: 600;
+        margin: 0;
+        color: colors.$dark-blue;
     }
 }
 
