--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -1,4 +1,6 @@
 @use "../../style/colors.scss";
+@use "../../style/fontsizes.scss";
+@use "../../style/margins.scss";
 
 .popup-container{
     position: fixed;
@@ -23,21 +25,19 @@
     background: white;
     width: 500px;
     height: 85%;
-    min-height: 650px;
+    min-height: 600px;
     max-height: 700px;
     display: flex;
     flex-direction: column;
-    padding: 0 30px;
+    padding: 0 margins.$margin-md;
     align-items: center;
     position: relative;
     border-radius: 6px;
 
-    h1 {
+    h2 {
         font-weight: 600;
-        font-size: 24px;
         margin: 0;
-        margin-bottom: 15px;
-        margin-top: 30px;
+        margin-top: margins.$margin-lg;
     }
 
     .close-icon {
@@ -59,11 +59,15 @@
     }
 
     .submit-button {
-        width: 50%;
+        width: 40%;
     }
 
     p {
         color: colors.$dark-blue;
+        margin: 0;
+        margin-bottom: 5px;
+        margin-top: margins.$margin-md;
+        font-size: fontsizes.$fontsz-sm;
     }
 }
 
@@ -72,33 +76,11 @@
     min-width: 400px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin: margins.$margin-lg 0;
     position: relative;
 
-    .hashtag {
-        width: 50px;
-        height: 50px;
-        box-sizing: border-box;
-        position: absolute;
-        top: 51.5px;
-        background-color: colors.$darker-grey-background;
-        color: rgba(0,0,0,0.5);
-        z-index: 1;
-        border-radius: 6px 0 0 6px;
-        box-shadow: 
-            inset 0 1px 0 0 colors.$text-field-stroke, 
-            inset 0 -1px 0 0 colors.$text-field-stroke, 
-            inset 1px 0 0 0 colors.$text-field-stroke;
-        font-size: 20px;
-        line-height: 50px;
-        text-align: center;
-    }
-
-    .hashtag + .text-field {
-        margin-left: 50px;
-        input {
-            border-radius: 0 6px 6px 0;
-        }
+    .first-label {
+        margin-top: 0;
     }
 }
 
@@ -125,8 +107,8 @@
 
     button {
         all: unset;
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
         background-color: colors.$switch-button-background;
         border-radius: 6px;
         box-sizing: border-box;
