--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -1,32 +1,35 @@
+@use "../../style/fontsizes.scss";
+@use "../../style/margins.scss";
+
 .dashboard {
+
     .dashboard-content {
-        flex-grow: 1;
         background-color: white;
-        margin-left: 40px;
-        margin-right: 40px;
-        margin-bottom: 40px;
+        margin-left: margins.$margin-md;
+        margin-right: margins.$margin-md;
+        margin-bottom: margins.$margin-md;
         border-radius: 6px;
         overflow-x: auto;
-        overflow-y: hidden;
+        overflow-y: auto;
         filter: drop-shadow(5px 5px 15px #dee0e2);
 
         .container-title {
-            padding: 30px;
-
-            h2 {
-                font-weight: 600;
-                font-size: 24px;
-                margin: 0;
-            }
+            padding: margins.$margin-md;
         }
     }
 
     .graph-container .graphs-content {
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 30px;
         display: flex;
         flex-direction: row;
         column-gap: 1rem;
+    }
+
+    .graph-container {
+        flex: 1.3;
+        display: flex;
+    }
+
+    .list-container {
+        flex: 1;
     }
 }
