--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -1,3 +1,5 @@
+@use "../../style/colors.scss";
+
 @use "../../style/margins.scss";
 
 .list-container {
@@ -27,6 +29,70 @@
 
             .placeholder-content {
                 align-items: center;
+            }
+        }
+    }
+
+
+}
+
+
+.case-list-page{
+   
+    .pagination-wrapper{
+        align-items: center;
+        user-select: none;
+        display: flex;
+        justify-content: end;
+        margin-left: margins.$margin-md;
+        margin-right: margins.$margin-md;
+        margin-bottom: margins.$margin-md;
+        gap: 20px;
+
+        & > p{
+           display: inline-block;
+           margin-right: 20px;
+        }
+    }
+    .pagination-switch-buttons {
+        align-self: end;
+        display: flex;
+        gap: 10px;
+        width: fit-content;
+
+        & > button {
+            all: unset;
+            width: 45px;
+            height: 45px;
+            background-color: colors.$switch-button-background;
+            border-radius: 6px;
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+    
+            &:hover{
+                background-color: colors.$switch-button-hover;
+            }
+        }
+    
+        & > .left {
+    
+            svg {
+                transform: rotate(0.5turn);
+            }
+        }
+    
+        & > .disabled {
+            background-color: colors.$switch-button-disabled-background;
+            pointer-events: none;
+            
+            svg {
+                path {
+                    fill: colors.$switch-button-disabled-icon;
+                }
             }
         }
     }
