Created a bubble-chart for statistics page. Shows bubbles for each category based on average time and number of cases per category

--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -43,7 +43,7 @@
         align-items: center;
         user-select: none;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         margin-left: margins.$margin-md;
         margin-right: margins.$margin-md;
         margin-bottom: margins.$margin-md;
