Fixed basic layout for daily info

--- a/frontend-friends/src/components/dailyData/daily-data.scss
+++ b/frontend-friends/src/components/dailyData/daily-data.scss
@@ -15,32 +15,32 @@
         .data-title {
             position: relative;
             text-align: center;
-            top: 10px;
+            top: -50px;
         }
 
         .amount {
             position: relative;
-            top: 25px;
+            top: 30%;
             font-size: 24px;
             font-weight: bold;
         }
 
         .errands-text {
             position: relative;
-            top: 22px;
+            top: 35px;
             font-size: 14px;
             color: #80888f;
         }
 
         .data-pic {
             position: relative;
-            top: -20px;
+            top: -85px;
             text-align: center;
         }
         
         .data-comparison {
             position: relative;
-            top: 35px;
+            top: 45px;
             color: #80888f;
         }
 
