Fixed colorful categories in case list

--- a/frontend-friends/src/components/list/list.scss
+++ b/frontend-friends/src/components/list/list.scss
@@ -25,7 +25,6 @@ tr, th, td {
 
 td {
     overflow: hidden;
-    cursor: pointer;
 }
 
 .list-header {
@@ -61,4 +60,12 @@ td {
         width: 18px;
         height: 18px;
     }
+}
+
+.bold-text {
+    font-weight: 600;
+}
+
+.editable {
+    cursor: pointer;
 }
