--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -52,3 +52,47 @@ $switch-button-background: #D1D9E1;
 $switch-button-hover: #C1C5C9;
 $switch-button-disabled-background: #E6E8E9;
 $switch-button-disabled-icon: #9C9FA0;
+
+.text-category-blue {
+    color: $category-blue;
+}
+
+.text-category-cyan {
+    color: $category-cyan;
+}
+
+.text-category-red {
+    color: $category-red;
+}
+
+.text-category-yellow {
+    color: $category-yellow;
+}
+
+.text-category-brown {
+    color: $category-brown;
+}
+
+.text-category-green {
+    color: $category-green;
+}
+
+.text-category-purple {
+    color: $category-purple;
+}
+
+.text-category-violet {
+    color: $category-violet;
+}
+
+.text-category-gray {
+    color: $category-gray;
+}
+
+.text-category-orange {
+    color: $category-orange;
+}
+
+.text-category-darker-green {
+    color: $category-darker-green;
+}
