--- a/frontend-friends/src/components/piechart/piechart.scss
+++ b/frontend-friends/src/components/piechart/piechart.scss
@@ -1,5 +1,12 @@
 @use '../../style/colors';
 .pie-button-wrapper{
-    width: 100%;
-    height: 35vh;
+    width: 50%;
+    min-height: 250px;
+}
+
+@media screen and (max-width: 992px){
+    .pie-button-wrapper{
+        width: 100%;
+    }
+    
 }
