--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -3,9 +3,11 @@
 
 .dashboard {
 
+    .content-container{
+        height: auto;
+    }
     //background-color: unset;
     .dashboard-content {
-        background-color: white;
         margin-left: margins.$margin-md;
         margin-right: margins.$margin-md;
         margin-bottom: margins.$margin-md;
@@ -19,8 +21,7 @@
         }
         
         .daily-data-container {
-            position: absolute;
-            right: 0px
+            justify-self: end;
         }
     }
 
@@ -29,9 +30,11 @@
         flex-direction: row;
         column-gap: 1rem;
     }
+    .graphs-content{
+        flex-grow: 1;
+    }
 
     .graph-container {
-        flex: 1.3;
         display: flex;
     }
 
@@ -40,6 +43,18 @@
     }
     .mid-content {
         display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        gap: 20px;
     }
     
+}
+
+@media screen and (max-width: 1200px){
+    
+}
+
+@media screen and (max-width: 992px){
+
+
 }
