--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -22,6 +22,7 @@
         
         .daily-data-container {
             justify-self: end;
+            max-width: 100%;
         }
     }
 
@@ -41,9 +42,16 @@
     .list-container {
         flex: 1;
     }
+    // .mid-content {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     width: 100%;
+    //     gap: 20px;
+    // }
+
     .mid-content {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: auto auto;
         width: 100%;
         gap: 20px;
     }
@@ -51,6 +59,15 @@
 }
 
 @media screen and (max-width: 1200px){
+    .dashboard .dashboard-content {
+        .daily-data-container {
+            justify-self: center;
+        }
+
+        .mid-content {
+            grid-template-columns: auto;
+        }
+    }
     
 }
 
