--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -3,8 +3,11 @@
 
 .dashboard {
 
+    .content-container{
+        height: auto;
+    }
+    //background-color: unset;
     .dashboard-content {
-        background-color: white;
         margin-left: margins.$margin-md;
         margin-right: margins.$margin-md;
         margin-bottom: margins.$margin-md;
@@ -16,6 +19,11 @@
         .container-title {
             padding: margins.$margin-md;
         }
+        
+        .daily-data-container {
+            justify-self: end;
+            max-width: 100%;
+        }
     }
 
     .graph-container .graphs-content {
@@ -23,13 +31,47 @@
         flex-direction: row;
         column-gap: 1rem;
     }
+    .graphs-content{
+        flex-grow: 1;
+    }
 
     .graph-container {
-        flex: 1.3;
         display: flex;
     }
 
     .list-container {
         flex: 1;
     }
+    // .mid-content {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     width: 100%;
+    //     gap: 20px;
+    // }
+
+    .mid-content {
+        display: grid;
+        grid-template-columns: auto auto;
+        width: 100%;
+        gap: 20px;
+    }
+    
+}
+
+@media screen and (max-width: 1200px){
+    .dashboard .dashboard-content {
+        .daily-data-container {
+            justify-self: center;
+        }
+
+        .mid-content {
+            grid-template-columns: auto;
+        }
+    }
+    
+}
+
+@media screen and (max-width: 992px){
+
+
 }
